WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96095
[EFL] JIT memory usage is not retrieved
https://bugs.webkit.org/show_bug.cgi?id=96095
Summary
[EFL] JIT memory usage is not retrieved
Hojong Han
Reported
2012-09-07 04:36:57 PDT
Fill JITBytes for EFL port
Attachments
Patch
(1.45 KB, patch)
2012-09-07 04:40 PDT
,
Hojong Han
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hojong Han
Comment 1
2012-09-07 04:40:12 PDT
Created
attachment 162742
[details]
Patch
Geoffrey Garen
Comment 2
2012-09-10 09:54:58 PDT
Comment on
attachment 162742
[details]
Patch r=me
WebKit Review Bot
Comment 3
2012-09-10 09:59:01 PDT
Comment on
attachment 162742
[details]
Patch Clearing flags on attachment: 162742 Committed
r128071
: <
http://trac.webkit.org/changeset/128071
>
WebKit Review Bot
Comment 4
2012-09-10 09:59:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug