[EFL] JIT memory usage is not retrieved https://bugs.webkit.org/show_bug.cgi?id=96095

Patch by Hojong Han <hojong.han@samsung.com> on 2012-09-10
Reviewed by Geoffrey Garen.

Fill JITBytes for EFL port.

* runtime/MemoryStatistics.cpp:
(JSC::globalMemoryStatistics):

Canonical link: https://commits.webkit.org/114164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128071 268f45cc-cd09-0410-ab3c-d52691b4dbfc